# economics

./: .gitignore  README.md  pyproject.toml
data/processed/: cbo_proxy_median_adjusted_income_after_tax_transfer.csv  cps_ipums_median_adult_equivalent_resources.csv  cps_ipums_median_adult_equivalent_resources_real.csv  cps_ipums_preflight_summary.csv  fred_real_disposable_personal_income_per_capita.csv  fred_real_median_household_income.csv  fred_real_median_personal_income.csv
docs/: data_sources.md  methodology.md
docs/superpowers/plans/: 2026-07-03-cbo-ingestion.md  2026-07-03-cps-ipums-phase1.md  2026-07-03-economics-mvp.md  2026-07-03-fred-ingestion.md  2026-07-04-cps-ipums-real-dollar-qa.md
docs/superpowers/specs/: 2026-07-03-cbo-ingestion-design.md  2026-07-03-cps-ipums-phase1-design.md  2026-07-03-economics-mvp-design.md  2026-07-03-fred-ingestion-design.md  (+1 more)
notebooks/: 01_cbo_proxy_starter.ipynb
scripts/: build_cbo_proxy.py  build_cps_ipums_demo.py  build_cps_ipums_real.py  build_cps_public_proxy_qa.py  build_fred_comparisons.py  build_public_proxy_summary.py  diagnose_cps_ipums_attrition.py  plot_cbo_proxy.py  plot_public_proxies.py
src/economics/: __init__.py  cbo.py  charts.py  cps.py  equivalence.py  fred.py  loaders.py  metrics.py  paths.py  prices.py  proxy_qa.py  resources.py  series.py  tables.py
tests/: test_cbo_ingestion.py  test_core_metrics.py  test_cps_ipums.py  test_cps_ipums_real.py  test_cps_public_proxy_qa.py  test_fred_ingestion.py  test_loaders.py  test_notebook.py  test_outputs.py  test_prices.py
